<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_exchange_date"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="@+id/tv_date" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:hint="@string/amount"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/btn_select_date"
        app:layout_constraintTop_toBottomOf="@id/btn_select_date" />

    <Spinner
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/amount"
        app:layout_constraintBottom_toBottomOf="@id/amount"
        app:layout_constraintStart_toEndOf="@+id/amount" />

    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

    <TextView
        android:id="@+id/result"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:hint="@string/result"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@id/convert"
        app:layout_constraintTop_toBottomOf="@id/convert" />

    <Spinner
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/result"
        app:layout_constraintTop_toTopOf="@id/result"
        app:layout_constraintBottom_toBottomOf="@id/result" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:listitem="@layout/multi_lines"/>
</androidx.constraintlayout.widget.ConstraintLayout>